--- a/game/game.cabal
+++ b/game/game.cabal
@@ -56,6 +56,7 @@ executable game-exe
     , mtl
     , sdl2-image
     , text == 2.0.2
+    , containers
   default-language: Haskell2010
 
 test-suite game-test
