--- a/game/game.cabal
+++ b/game/game.cabal
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      Character
       Lib
   other-modules:
       Paths_game
@@ -35,8 +36,12 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , extra
     , sdl2
+    , mtl
+    , sdl2-image
     , text == 2.0.2
+    , containers
   default-language: Haskell2010
 
 executable game-exe
@@ -57,24 +62,4 @@ executable game-exe
     , sdl2-image
     , text == 2.0.2
     , containers
-  default-language: Haskell2010
-
-test-suite game-test
-  type: exitcode-stdio-1.0
-  main-is: Spec.hs
-  other-modules:
-      Paths_game
-  autogen-modules:
-      Paths_game
-  hs-source-dirs:
-      test
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      base >=4.7 && <5
-    , game
-    , extra
-    , mtl
-    , sdl2
-    , sdl2-image
-    , text == 2.0.2
   default-language: Haskell2010
