--- a/game/game.cabal
+++ b/game/game.cabal
@@ -25,8 +25,14 @@ source-repository head
 
 library
   exposed-modules:
+      GameRectangle
       Character
-      Lib
+      Enemy
+      Map
+      Assets
+      GameState
+      Game
+      Render
   other-modules:
       Paths_game
   autogen-modules:
@@ -40,6 +46,8 @@ library
     , sdl2
     , mtl
     , sdl2-image
+    , sdl2-mixer
+    , sdl2-ttf
     , text == 2.0.2
     , containers
   default-language: Haskell2010
